--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ name: Publish tagged images to Docker Hub
 
 jobs:
   docker:
-    runs-on: docker
+    runs-on: ubuntu-latest 
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
