--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
           flavor: latest=false
           tags: |
             type=ref,event=tag
-            type=semver,pattern=v{{major}}.{{minor}},enable=${{ github.ref == 'v[0-9]+.[0-9]+.0'}}
+            type=semver,pattern=v{{major}}.{{minor}},enable=${{ github.ref_name == 'v[0-9]+.[0-9]+.0'}}
             type=raw,value=latest,enable=${{ github.event_name == 'release' }}
 
       - name: Build and push
