--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,14 +37,18 @@ jobs:
           flavor: latest=false
           tags: |
             type=ref,event=tag
-            type=semver,pattern=v{{major}}.{{minor}},enable=${{ github.ref_name == 'v[0-9]+.[0-9]+.0'}}
+            type=semver,pattern=v{{major}}.{{minor}},enable=${{ github.ref_name == 'v[0-9]+.[0-9]+.0' }}
             type=raw,value=latest,enable=${{ github.event_name == 'release' }}
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          # We do not push tags for the cron jobs, this is only for test purposes
-          push: ${{ github.event_name != 'schedule' }}
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
+      - name: Echo ref_name
+        id: ref
+        run: echo ${{ github.ref_name }}
+        
+      # - name: Build and push
+      #   id: docker_build
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     # We do not push tags for the cron jobs, this is only for test purposes
+      #     push: ${{ github.event_name != 'schedule' }}
+      #     platforms: linux/amd64,linux/arm64
+      #     tags: ${{ steps.meta.outputs.tags }}
