--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Echo ref_name
         id: ref
-        run: echo ${{ github.ref_name }}
+        run: echo ${{ github.ref_name == 'v0.[0-9]+.0' }}
         
       # - name: Build and push
       #   id: docker_build
