--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Echo ref_name
         id: ref
         run: |
-          echo ${{ github.ref_name == 'v0.9.0' }}
+          echo ${{ github.ref_name == v[0-9]+.1.0 }}
           echo ${{ github.ref_name }}
         
       # - name: Build and push
