--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,36 +14,36 @@ jobs:
   docker:
     runs-on: ubuntu-latest 
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        if: github.event_name != 'schedule'
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Login to DockerHub
+      #   if: github.event_name != 'schedule'
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: janithpet/docker_actions_test
-          # The lastest tag is only pushed for the official Meilisearch release
-          # See https://github.com/docker/metadata-action#latest-tag
-          flavor: latest=false
-          tags: |
-            type=ref,event=tag
-            type=semver,pattern=v{{major}}.{{minor}},enable=${{ github.ref_name == 'v[0-9]+.[0-9]+.0' }}
-            type=raw,value=latest,enable=${{ github.event_name == 'release' }}
+      # - name: Docker meta
+      #   id: meta
+      #   uses: docker/metadata-action@v3
+      #   with:
+      #     images: janithpet/docker_actions_test
+      #     # The lastest tag is only pushed for the official Meilisearch release
+      #     # See https://github.com/docker/metadata-action#latest-tag
+      #     flavor: latest=false
+      #     tags: |
+      #       type=ref,event=tag
+      #       type=semver,pattern=v{{major}}.{{minor}},enable=${{ github.ref_name == 'v[0-9]+.[0-9]+.0' }}
+      #       type=raw,value=latest,enable=${{ github.event_name == 'release' }}
 
       - name: Echo ref_name
         id: ref
         run: |
-          echo ${{ github.ref_name == v[0-9]+.1.0 }}
+          echo ${{ github.ref_name == 'v[0-9]+.2.0' }}
           echo ${{ github.ref_name }}
         
       # - name: Build and push
