--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,19 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Check tag format
+        id: check-tag-format
+        run: |
+          # escape submitted tag name
+          printf -v escaped_tag "%q" ${{ github.ref_name }}
+
+          if [[ $(escaped_tag) =~ "^v[0-9]+\.[0-9]+\.[0-9]+$" ]]; 
+            then
+              echo ::set-output name=match::true
+            else
+              echo ::set-output name=match::false
+          fi
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v3
@@ -39,7 +52,7 @@ jobs:
             type=ref,event=tag
             
             # testing comment
-            type=semver,pattern=v{{major}}.{{minor}},enable=${{ endsWith(github.ref_name, '.0') }}
+            type=semver,pattern=v{{major}}.{{minor}},enable=${{ steps.check-tag-format.outputs.match  }}
             type=raw,value=latest,enable=${{ github.event_name == 'release' }}
         
       - name: Build and push
