--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,9 +31,9 @@ jobs:
         id: check-tag-format
         run: |
           # escape submitted tag name
-          printf -v escaped_tag "%q" ${{ github.ref_name }}
+          escaped_tag=$(printf "%q" ${{ github.ref_name }})
 
-          if [[ $(escaped_tag) =~ "^v[0-9]+\.[0-9]+\.[0-9]+$" ]]; 
+          if [[ $escaped_tag =~ "^v[0-9]+\.[0-9]+\.[0-9]+$" ]]; 
             then
               echo ::set-output name=match::true
             else
