--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,25 +14,25 @@ jobs:
   docker:
     runs-on: ubuntu-latest 
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        if: github.event_name != 'schedule'
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Login to DockerHub
+      #   if: github.event_name != 'schedule'
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Check tag format
         id: check-tag-format
         run: |
           # escape submitted tag name
           escaped_tag=$(printf "%q" ${{ github.ref_name }})
-
+          echo $escaped_tag
           if [[ $escaped_tag =~ "^v[0-9]+\.[0-9]+\.[0-9]+$" ]]; 
             then
               echo ::set-output name=match::true
@@ -40,26 +40,26 @@ jobs:
               echo ::set-output name=match::false
           fi
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: janithpet/docker_actions_test
-          # The lastest tag is only pushed for the official Meilisearch release
-          # See https://github.com/docker/metadata-action#latest-tag
-          flavor: latest=false
-          tags: |
-            type=ref,event=tag
+      # - name: Docker meta
+      #   id: meta
+      #   uses: docker/metadata-action@v3
+      #   with:
+      #     images: janithpet/docker_actions_test
+      #     # The lastest tag is only pushed for the official Meilisearch release
+      #     # See https://github.com/docker/metadata-action#latest-tag
+      #     flavor: latest=false
+      #     tags: |
+      #       type=ref,event=tag
             
-            # testing comment
-            type=semver,pattern=v{{major}}.{{minor}},enable=${{ steps.check-tag-format.outputs.match  }}
-            type=raw,value=latest,enable=${{ github.event_name == 'release' }}
+      #       # testing comment
+      #       type=semver,pattern=v{{major}}.{{minor}},enable=${{ steps.check-tag-format.outputs.match  }}
+      #       type=raw,value=latest,enable=${{ github.event_name == 'release' }}
         
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          # We do not push tags for the cron jobs, this is only for test purposes
-          push: ${{ github.event_name != 'schedule' }}
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.meta.outputs.tags }}
+      # - name: Build and push
+      #   id: docker_build
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     # We do not push tags for the cron jobs, this is only for test purposes
+      #     push: ${{ github.event_name != 'schedule' }}
+      #     platforms: linux/amd64,linux/arm64
+      #     tags: ${{ steps.meta.outputs.tags }}
