--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,8 +32,8 @@ jobs:
         run: |
           # escape submitted tag name
           escaped_tag=$(printf "%q" ${{ github.ref_name }})
-          echo $escaped_tag
-          if [[ $escaped_tag =~ "^v[0-9]+\.[0-9]+\.[0-9]+$" ]]; 
+          
+          if [[ $escaped_tag =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; 
             then
               echo ::set-output name=match::true
             else
